# model_logger

./: README.md  pyproject.toml  setup.cfg  setup.py
model_logger/: __init__.py
model_logger_dp/: logger.py  logger_decorator.py
my_logger/: logger.py
