[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "model_logger_dp"
authors = [
    {name = "Ian Zhu", email = "IanZhu@m.ldu.edu.cn"},
]
description = "Model Logger for Pytorch"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "logger", "model"]
license = {text = "MIT"}

#dependencies = [
#        'torch',
#        'thop',
#]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/10-4zz/model_logger_dp"
repository = "https://github.com/10-4zz/model_logger_dp"

[tool.pdm.version]
source = "file"
path = "model_logger_dp/version.py"
